fix(ui): fix geosearch resutls overflow
in Firefox and IE.

Closes #1668

--- a/src/content/styles/modules/_geosearch.scss
+++ b/src/content/styles/modules/_geosearch.scss
@@ -43,18 +43,18 @@ $result-item-height-touch: rem(4.8);
         max-height: 100%;
 
         display: flex;
-        flex-direction: column;
-
         pointer-events: all;
 
         .rv-geosearch-content {
             background-color: white;
 
             position: relative;
-            margin-top: 10px;
+            margin-top: rem(1.0);
 
             display: flex;
             flex-direction: column;
+
+            width: 100%;
 
             %geosearch-fixed-section {
                 height: rem(4.0);
